--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         const miningDuration = 60; // seconds
         const userId = tg.initDataUnsafe.user.id;
 
-        const GITHUB_TOKEN = 'YOUR_GITHUB_TOKEN';
+        const GITHUB_TOKEN = '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';
         const REPO_OWNER = 'digitalvaha';
         const REPO_NAME = 'sanchez';
         const FILE_PATH = 'data.json';
